--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "project-react-native-app",
-    "slug": "project-react-native-app",
+    "name": "movie-react-app",
+    "slug": "movie-react-app",
     "privacy": "public",
     "sdkVersion": "44.0.0",
     "platforms": ["ios", "android", "web"],
